--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style type="text/css">
       .container { max-width: 540px; }
-      td:nth-of-type(odd) { width: 150px; }
+      td:nth-of-type(odd) { width: 30%; }
     </style>
     <title>比率計算</title>
   </head>
@@ -35,19 +35,19 @@
       <table class="table table-striped mb-5">
         <tbody>
           <tr>
-            <th scope="row">16:9にすると</th>
+            <th scope="row">16:9</th>
             <td id="wRatio1"></td>
             <td>：</td>
             <td id="hRatio1"></td>
           </tr>
           <tr>
-            <th scope="row">4:3にすると</th>
+            <th scope="row">4:3</th>
             <td id="wRatio2"></td>
             <td>：</td>
             <td id="hRatio2"></td>
           </tr>
           <tr>
-            <th scope="row">黄金比にすると</th>
+            <th scope="row">黄金比</th>
             <td id="wRatio3"></td>
             <td>：</td>
             <td id="hRatio3"></td>
